@@ -6,7 +6,10 @@
 <!--###FIELD_WRAPPER_TITLE### --><!--###FIELD_WRAPPER_UID### -->[###LABEL_UID###]
 ###UID###
 
-<!--###FIELD_WRAPPER_UID### --><!--###FIELD_WRAPPER_ACCREDITATION_NUMBER### -->[###LABEL_ACCREDITATION_NUMBER###]
+<!--###FIELD_WRAPPER_UID### --><!--###FIELD_WRAPPER_SEATS### -->[###LABEL_SEATS###]
+###SEATS###
+
+<!--###FIELD_WRAPPER_SEATS### --><!--###FIELD_WRAPPER_ACCREDITATION_NUMBER### -->[###LABEL_ACCREDITATION_NUMBER###]
 ###ACCREDITATION_NUMBER###
 
 <!--###FIELD_WRAPPER_ACCREDITATION_NUMBER### --><!--###FIELD_WRAPPER_CREDIT_POINTS### -->[###LABEL_CREDIT_POINTS###]
